<resources>
    <string name="app_name">ShopMax</string>
    <string name="get_quote">Get Quote</string>
    <string name="place_order">Place Order</string>
    <string name="track_order">Track Order</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="city_name">City Name</string>
    <string name="address">Address</string>
    <string name="pick_up_details">Pick Up Details</string>
    <string name="shippment_date">Shippment Date</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="package_name">Package Name</string>
    <string name="package_wieght">Weight</string>
    <string name="package_lenght">Lenght</string>
    <string name="package_width">Width</string>
    <string name="package_height">Height</string>
    <string name="remove_package">Remove Package</string>
    <string name="edit_package">Edit Package</string>
    <string name="add_packages">Add Packages</string>
    <string name="x">X</string>
    <string name="add_package">Add Package</string>
    <string name="request_quote">Request Quote</string>
    <string name="product_nmae">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="country_code">Country Code</string>
    <string name="total_price">Total Price</string>
    <string name="earliest">Earliest</string>
    <string name="latest">Latest</string>
    <string name="pick_up_day">Pick Up Day</string>
    <string name="pick_additional_day">Additional day</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_day">Delivery Day</string>
    <string name="transit">Transit Day</string>
</resources>