<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_minus20sdp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.shopmax.ui.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        app:cardMaxElevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:targetApi="lollipop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_30ssp"
                android:text="@string/app_name"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_quote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view"
                android:id="@+id/get_quote"
                android:textSize="@dimen/_20ssp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_quote"
                android:id="@+id/place_order"
                android:textSize="@dimen/_20ssp"
                android:layout_margin="@dimen/_20sdp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_order"
                android:id="@+id/track_order"
                android:textSize="@dimen/_20ssp"
                android:layout_margin="@dimen/_20sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>