<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="pack"
            type="com.shopmax.app.network.model.getquote.Package" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp"
        app:cardMaxElevation="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        tools:targetApi="lollipop">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/delete"
                android:clickable="true"
                android:textColor="@color/colorAccent"
                android:text="@string/remove_package"
                android:textStyle="bold"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toStartOf="@id/delete"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/edit"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/edit_package"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/_20sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/name_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit"
                android:layout_margin="@dimen/_1sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/package_name"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/package_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@{pack.name}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/weight_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_row"
                android:layout_margin="@dimen/_1sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/package_wieght"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/package_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@{pack.w}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lenght_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_row"
                android:layout_margin="@dimen/_1sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/package_lenght"
                    android:textColor="#000"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/package_lenght"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@{pack.dimensions.l}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/width_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lenght_row"
                android:layout_margin="@dimen/_1sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/package_width"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/package_width"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@{pack.dimensions.w}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/height_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/width_row"
                android:layout_margin="@dimen/_1sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/package_height"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/package_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@{pack.dimensions.h}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</layout>